--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	So while this site is meant for my work from class, this page in particular will honor the one true idol Maki Nishikino.
     </p>    
     <img src="maki/makilove.jpg" height="666"> 
-	  <img src="maki/196139.jpg" height="333">
+	  <img src="0/0BCmalg.png" height="333">
     <img src="maki/maki_tsundere.jpg" height="250">
     <img src="maki/maki.jpg" height="250">
     <img src="maki/36f6a74229f9ed349166dba24dacebdc4d3c031d_hq.gif" height="333">
