--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <a href="index.html">CathedralOfMaki</a>
-    <a href="portfolio.html">Portfolio</a>
+    <!--<a href="portfolio.html">Portfolio</a>
 		<a href="fun.html">TempleOfRin</a>
-		<a href="nuf.html">TheRiseOfYouWatanabe</a>
+		<a href="nuf.html">TheRiseOfYouWatanabe</a>-->
     <h1>Maki Nishikino Is Best Girl!</h1>
-    <h2>Maki</h2>
+    <h2>Makigraphy</h2>
 	<p>
 	So while this site is meant for my work from class, this page in particular will honor the one true idol Maki Nishikino.
     </p>    
