--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 	<img src="2maki/nicomakidancingstarsonme-1417294264n4g8k.jpg" height="300">
 	<img src="2maki/nishikinomakifull-1417304528n84kg-700x1005.jpg" height="300">
 	<img src="2maki/nishikinomakifull-1417467873n8kg4-700x1005.jpg" height="300">
-  </body>
+  <!--</body>
   <embed src="mp3/LoveLive!Daring!!-MakiNishikinoEnglishandRomajiSubtitles.mp3">
-	<BODY BGCOLOR="#900C3F">
+	<BODY BGCOLOR="#900C3F">-->
 </html>
